feat(validate): add VSO/VCO + umbrella validation; dual-operator guardrail
- Render vault-runtime and vault-config for local|sno|prod in make validate
- Sanity-check argocd-apps ApplicationSet and umbrella per env
- Add conftest rule blocking ESO+VSO apps together for the same env
- Enable VSO/VCO for sno in ApplicationSet values (placeholders)

Refs: T13 (complete), T6/T17

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -49,6 +49,17 @@ envs:
     toyWebImageUpdater:
       pause: false
     tektonFsGroup: ""
+    vaultRuntimeEnabled: true
+    vaultRuntimeAddress: http://vault-sno.vault.sno.svc:8200
+    vaultRuntimeKubernetesMount: kubernetes
+    vaultRuntimeRoleName: gitops-sno
+    vaultConfigEnabled: true
+    vaultConfigAddress: http://vault-sno.vault.sno.svc:8200
+    vaultConfigKubernetesHost: https://kubernetes.default.svc
+    vaultConfigMountPath: kubernetes
+    vaultConfigConnectionRole: kube-auth
+    vaultConfigRoleName: gitops-sno
+    vaultConfigPolicyName: gitops-sno
   - name: prod
     clusterServer: https://kubernetes.default.svc
     appNamespace: bitiq-prod
