fix(ci-pipelines): align triggers secret with VSO and update docs
- Use configurable secret key when createSecret=true (defaults to 'token')
- Update values/docs to reflect Vault-first (VSO) flow for webhook token

Refs: T10

--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -3,6 +3,7 @@
 {{- $defaultSA := .Values.serviceAccountName | default "pipeline" -}}
 {{- $listenerSA := .Values.triggers.serviceAccountName -}}
 {{ if .Values.triggers.createSecret }}
+{{- $secretKey := $root.Values.triggers.secretKey | default "token" -}}
 ---
 apiVersion: v1
 kind: Secret
@@ -11,7 +12,7 @@ metadata:
   namespace: openshift-pipelines
 type: Opaque
 stringData:
-  secretToken: {{ required "Set triggers.secretToken when triggers.createSecret=true" .Values.triggers.secretToken | quote }}
+  {{ $secretKey }}: {{ required "Set triggers.secretToken when triggers.createSecret=true" .Values.triggers.secretToken | quote }}
 {{ end }}
 
 {{ range $idx, $pipeline := .Values.pipelines }}
