feat(prod): enable VSO/VCO for ENV=prod and update runbook

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -71,3 +71,14 @@ envs:
     toyWebImageUpdater:
       pause: false
     tektonFsGroup: ""
+    vaultRuntimeEnabled: true
+    vaultRuntimeAddress: https://vault-prod.vault.svc:8200
+    vaultRuntimeKubernetesMount: kubernetes
+    vaultRuntimeRoleName: gitops-prod
+    vaultConfigEnabled: true
+    vaultConfigAddress: https://vault-prod.vault.svc:8200
+    vaultConfigKubernetesHost: https://kubernetes.default.svc
+    vaultConfigMountPath: kubernetes
+    vaultConfigConnectionRole: kube-auth
+    vaultConfigRoleName: gitops-prod
+    vaultConfigPolicyName: gitops-prod
