--- a/charts/ci-pipelines/templates/rbac-eventlistener-binding.yaml
+++ b/charts/ci-pipelines/templates/rbac-eventlistener-binding.yaml
@@ -9,5 +9,20 @@ subjects:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  # On OpenShift Pipelines (Triggers v0.33), the correct clusterrole is 'tekton-triggers-eventlistener-roles'
+  # Grant create of PipelineRuns, events, etc.
   name: tekton-triggers-eventlistener-roles
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: pipeline-triggers-eventlistener-clusterroles
+subjects:
+  - kind: ServiceAccount
+    name: {{ .Values.triggers.serviceAccountName | default .Values.serviceAccountName | default "pipeline" }}
+    namespace: openshift-pipelines
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  # Allow reading ClusterInterceptors and Secrets required by interceptors
+  name: tekton-triggers-eventlistener-clusterroles
