--- a/charts/ci-pipelines/values.yaml
+++ b/charts/ci-pipelines/values.yaml
@@ -92,3 +92,7 @@ triggers:
   secretToken: ""
   # Expose an OpenShift Route for the EventListener
   route: true
+  # Temporary: enable verbose zap logging on the EventListener sink to
+  # troubleshoot trigger matching. This injects K_LOGGING_CONFIG via the
+  # supported Pod overlay in Triggers v0.33 (OCP Pipelines 1.20).
+  debugLogging: true
