--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -51,6 +51,8 @@ ciPipelines:
     name: bitiq-listener
     githubSecretName: github-webhook-secret
     route: true
+    # Temporary: turn on debug logs for EventListener to diagnose triggers
+    debugLogging: true
   pipelines:
     - name: bitiq-build-and-push
       gitUrl: https://github.com/PaulCapestany/toy-service.git
