feat(umbrella): grant Argo controller admin in app/pipelines; add sync retries; rename vault app template
- Add RoleBindings in umbrella to grant openshift-gitops-argocd-application-controller ClusterRole admin in app and openshift-pipelines namespaces
- Add syncPolicy.retry to umbrella-managed Applications to auto-recover from transient failures (e.g., Vault not yet ready)
- Rename confusing app-eso-vault-examples.yaml to app-vault-operators.yaml

--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -2,6 +2,10 @@ env: local
 baseDomain: apps-crc.testing
 appNamespace: bitiq-local
 gitopsNamespace: openshift-gitops
+
+# Argo CD controller service account name (default instance)
+# If you customize the Argo CD instance name, update this accordingly.
+argocdControllerServiceAccount: openshift-gitops-argocd-application-controller
 pipelinesNamespace: openshift-pipelines
 
 # Repo & revision for all child Applications
