--- a/charts/bitiq-umbrella/templates/app-image-updater.yaml
+++ b/charts/bitiq-umbrella/templates/app-image-updater.yaml
@@ -19,5 +19,11 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 2m
     syncOptions:
       - CreateNamespace=true
