--- a/charts/bitiq-umbrella/templates/app-toy-web.yaml
+++ b/charts/bitiq-umbrella/templates/app-toy-web.yaml
@@ -54,5 +54,11 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 2m
     syncOptions:
       - CreateNamespace=true
