--- a/charts/bitiq-umbrella/templates/app-vault-operators.yaml
+++ b/charts/bitiq-umbrella/templates/app-vault-operators.yaml
@@ -32,6 +32,12 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 2m
     syncOptions:
       - CreateNamespace=true
 {{- end }}
@@ -77,6 +83,13 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 2m
     syncOptions:
       - CreateNamespace=true
 {{- end }}
+
