--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -7,6 +7,9 @@ appNamespace: bitiq-local
 gitopsNamespace: openshift-gitops
 pipelinesNamespace: openshift-pipelines
 
+# Argo CD controller service account (default instance)
+argocdControllerServiceAccount: openshift-gitops-argocd-application-controller
+
 repoUrl: https://github.com/bitiq-io/gitops.git
 targetRevision: main
 
