fix(ci-pipelines): disable EventListener debugLogging overlay by default
Tekton Triggers admission webhook in Pipelines 1.20 rejects env.value in EventListener overlay; keep debugLogging off by default and remove env-based enablement.

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -71,7 +71,7 @@ spec:
             - name: ciPipelines.fsGroup
               value: '{{ "{{ .tektonFsGroup }}" }}'
             - name: ciPipelines.eventListener.debugLogging
-              value: '{{ "{{ if eq .env \"local\" }}true{{ else }}false{{ end }}" }}'
+              value: '{{ "{{ false }}" }}'
             - name: vault.runtime.enabled
               value: '{{ "{{ .vaultRuntimeEnabled | default false }}" }}'
             - name: vault.runtime.address
