fix(ci-triggers): use configured gitUrl; accept both org and personal repos
- Template sets git-url from chart values to avoid payload clone_url dependency
- Expand repoFullNames to include both PaulCapestany/* and bitiq-io/* for service/web

--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -28,7 +28,6 @@ metadata:
   namespace: openshift-pipelines
 spec:
   params:
-    - name: git-repo-url
     - name: git-revision
   resourcetemplates:
     - apiVersion: tekton.dev/v1
@@ -48,7 +47,7 @@ spec:
           name: {{ $pipeline.name }}
         params:
           - name: git-url
-            value: $(tt.params.git-repo-url)
+            value: {{ $pipeline.gitUrl | quote }}
           - name: git-revision
             value: $(tt.params.git-revision)
           - name: runTests
