--- a/charts/ci-pipelines/values.yaml
+++ b/charts/ci-pipelines/values.yaml
@@ -35,6 +35,7 @@ pipelines:
     # Accept pushes from either personal or org repo
     repoFullNames:
       - PaulCapestany/toy-service
+      - bitiq-io/toy-service
     # Optional override per pipeline; falls back to top-level defaults when empty
     serviceAccountName: ""
     fsGroup: ""
@@ -68,6 +69,7 @@ pipelines:
     tlsVerify: "true"
     repoFullNames:
       - PaulCapestany/toy-web
+      - bitiq-io/toy-web
     serviceAccountName: ""
     fsGroup: ""
     eventTypes: ["push"]
