--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -70,6 +70,7 @@ ciPipelines:
       # Accept either personal or org repo full name
       repoFullNames:
         - PaulCapestany/toy-service
+        - bitiq-io/toy-service
       runTests: "true"
       testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
       testScript: |
@@ -86,6 +87,7 @@ ciPipelines:
       tlsVerify: "true"
       repoFullNames:
         - PaulCapestany/toy-web
+        - bitiq-io/toy-web
       runTests: "true"
       testImage: registry.access.redhat.com/ubi9/nodejs-20:1-1758500456
       testScript: |
