feat(charts): scaffold strfry chart and umbrella Application
- Add charts/strfry with StatefulSet, Service, Route, PVC.
- Add umbrella template app-strfry.yaml gated by values (disabled by default).

--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -47,6 +47,12 @@ sampleAppImages:
   toyService: quay.io/paulcapestany/toy-service
   toyWeb: quay.io/paulcapestany/toy-web
 
+# New services (env toggles)
+strfry:
+  enabled: false
+couchbase:
+  enabled: false
+
 ciPipelines:
   serviceAccountName: pipeline
   # Optional fsGroup override for Tekton TaskRuns; empty uses SCC defaults
