--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -22,6 +22,9 @@ envs:
       pause: false
     toyWebImageUpdater:
       pause: false
+    # Enable selected services for local env
+    strfryEnabled: true
+    couchbaseEnabled: true
     # Optional: fsGroup for Tekton TaskRun pods. If set, it will be passed to
     # the umbrella chart as ciPipelines.fsGroup so workspaces (PVCs) are group‑writable.
     # Leave empty to use cluster defaults/SCC. The bootstrap script auto-detects
@@ -48,6 +51,8 @@ envs:
       pause: false
     toyWebImageUpdater:
       pause: false
+    strfryEnabled: false
+    couchbaseEnabled: false
     tektonFsGroup: ""
     vaultRuntimeEnabled: true
     vaultRuntimeAddress: http://vault-sno.vault.sno.svc:8200
@@ -70,6 +75,8 @@ envs:
       pause: false
     toyWebImageUpdater:
       pause: false
+    strfryEnabled: false
+    couchbaseEnabled: false
     tektonFsGroup: ""
     vaultRuntimeEnabled: true
     vaultRuntimeAddress: https://vault-prod.vault.svc:8200
