feat(certs): add cert-manager-config chart + umbrella app
- Add charts/cert-manager-config with HTTP-01 ClusterIssuer.
- Add umbrella Application gated by certManager.enabled; enabled for local via ApplicationSet param.

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -72,6 +72,12 @@ spec:
               value: '{{ "{{ .strfryEnabled | default false }}" }}'
             - name: couchbase.enabled
               value: '{{ "{{ .couchbaseEnabled | default false }}" }}'
+            - name: certManager.enabled
+              value: '{{ "{{ .certManagerEnabled | default false }}" }}'
+            - name: strfry.enabled
+              value: '{{ "{{ .strfryEnabled | default false }}" }}'
+            - name: couchbase.enabled
+              value: '{{ "{{ .couchbaseEnabled | default false }}" }}'
             - name: ciPipelines.fsGroup
               value: '{{ "{{ .tektonFsGroup }}" }}'
             - name: ciPipelines.eventListener.debugLogging
