--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -25,6 +25,7 @@ envs:
     # Enable selected services for local env
     strfryEnabled: true
     couchbaseEnabled: true
+    certManagerEnabled: true
     # Optional: fsGroup for Tekton TaskRun pods. If set, it will be passed to
     # the umbrella chart as ciPipelines.fsGroup so workspaces (PVCs) are group‑writable.
     # Leave empty to use cluster defaults/SCC. The bootstrap script auto-detects
@@ -53,6 +54,7 @@ envs:
       pause: false
     strfryEnabled: false
     couchbaseEnabled: false
+    certManagerEnabled: false
     tektonFsGroup: ""
     vaultRuntimeEnabled: true
     vaultRuntimeAddress: http://vault-sno.vault.sno.svc:8200
@@ -77,6 +79,7 @@ envs:
       pause: false
     strfryEnabled: false
     couchbaseEnabled: false
+    certManagerEnabled: false
     tektonFsGroup: ""
     vaultRuntimeEnabled: true
     vaultRuntimeAddress: https://vault-prod.vault.svc:8200
