--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -37,6 +37,8 @@ strfry:
   enabled: false
 couchbase:
   enabled: false
+certManager:
+  enabled: false
 
 ciPipelines:
   serviceAccountName: pipeline
