feat(umbrella): add bootstrap-operators Application and enable CAO for local
- Add app-bootstrap-operators.yaml.
- Pass CAO values (enabled/name/source/channel) for local env.
- Add tests and fix quoting/validate.
- Include cert-manager-config chart and gating in umbrella.

--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -40,6 +40,17 @@ couchbase:
 certManager:
   enabled: false
 
+bootstrapOperators:
+  enabled: false
+  caoEnabled: false
+  caoChannel: ""
+  caoName: ""
+  caoSource: ""
+  caoSourceNamespace: openshift-marketplace
+  caoInstallNamespace: openshift-operators
+  caoStartingCSV: ""
+  caoApproval: Automatic
+
 ciPipelines:
   serviceAccountName: pipeline
   fsGroup: ""
