--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -74,10 +74,24 @@ spec:
               value: '{{ "{{ .couchbaseEnabled | default false }}" }}'
             - name: certManager.enabled
               value: '{{ "{{ .certManagerEnabled | default false }}" }}'
-            - name: strfry.enabled
-              value: '{{ "{{ .strfryEnabled | default false }}" }}'
-            - name: couchbase.enabled
-              value: '{{ "{{ .couchbaseEnabled | default false }}" }}'
+            - name: bootstrapOperators.enabled
+              value: '{{ "{{ .bootstrapOperatorsEnabled | default false }}" }}'
+            - name: bootstrapOperators.caoEnabled
+              value: '{{ "{{ .caoEnabled | default false }}" }}'
+            - name: bootstrapOperators.caoChannel
+              value: '{{ "{{ .caoChannel }}" }}'
+            - name: bootstrapOperators.caoName
+              value: '{{ "{{ .caoName }}" }}'
+            - name: bootstrapOperators.caoSource
+              value: '{{ "{{ .caoSource }}" }}'
+            - name: bootstrapOperators.caoSourceNamespace
+              value: '{{ "{{ .caoSourceNamespace | default \"openshift-marketplace\" }}" }}'
+            - name: bootstrapOperators.caoInstallNamespace
+              value: '{{ "{{ .caoInstallNamespace | default \"openshift-operators\" }}" }}'
+            - name: bootstrapOperators.caoStartingCSV
+              value: '{{ "{{ .caoStartingCSV }}" }}'
+            - name: bootstrapOperators.caoApproval
+              value: '{{ "{{ .caoApproval | default \"Automatic\" }}" }}'
             - name: ciPipelines.fsGroup
               value: '{{ "{{ .tektonFsGroup }}" }}'
             - name: ciPipelines.eventListener.debugLogging
