--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -56,6 +56,18 @@ couchbase:
 certManager:
   enabled: false
 
+bootstrapOperators:
+  enabled: false
+  # Couchbase Autonomous Operator overrides (passed into bootstrap-operators)
+  caoEnabled: false
+  caoChannel: ""
+  caoName: ""
+  caoSource: ""
+  caoSourceNamespace: openshift-marketplace
+  caoInstallNamespace: openshift-operators
+  caoStartingCSV: ""
+  caoApproval: Automatic
+
 ciPipelines:
   serviceAccountName: pipeline
   # Optional fsGroup override for Tekton TaskRuns; empty uses SCC defaults
