--- a/charts/bitiq-umbrella/Chart.yaml
+++ b/charts/bitiq-umbrella/Chart.yaml
@@ -3,4 +3,4 @@ name: bitiq-umbrella
 description: App-of-Apps to deploy platform components + a sample app for an ENV
 type: application
 version: 0.1.0
-appVersion: "toy-service-v0.3.28-commit.4589d52_toy-web-v0.1.24-commit.fe12466"
+appVersion: "toy-service-v0.3.30-commit.f435380_toy-web-v0.1.28-commit.e1dd216"
