feat(strfry): add ConfigMap and optional default-deny NetworkPolicy
- Mount /etc/strfry from ConfigMap; network policy disabled by default with DNS egress + extensible rules.

--- a/charts/couchbase-cluster/values-common.yaml
+++ b/charts/couchbase-cluster/values-common.yaml
@@ -25,3 +25,8 @@ buckets:
 route:
   enabled: true
   host: ""   # optional admin host (e.g., cb.<baseDomain>)
+  serviceName: ""   # optional Service name to route to (only render Route if set)
+  targetPort: 8091
+  clusterIssuerName: ""
+
+baseDomain: ""
