feat(strfry): add ConfigMap and optional default-deny NetworkPolicy
- Mount /etc/strfry from ConfigMap; network policy disabled by default with DNS egress + extensible rules.

--- a/charts/vault-runtime/templates/20-secrets-app.yaml
+++ b/charts/vault-runtime/templates/20-secrets-app.yaml
@@ -44,3 +44,25 @@ spec:
   vaultAuthRef: k8s
 {{- end }}
 {{- end }}
+
+{{- if .Values.enabled }}
+{{- $cb := .Values.secrets.couchbaseAdmin -}}
+{{- if $cb.enabled }}
+---
+apiVersion: secrets.hashicorp.com/v1beta1
+kind: VaultStaticSecret
+metadata:
+  name: {{ $cb.destinationName }}
+  namespace: {{ .Values.namespaces.app }}
+spec:
+  mount: gitops
+  type: kv-v2
+  path: {{ $cb.path }}
+  destination:
+    create: true
+    overwrite: true
+    name: {{ $cb.destinationName }}
+    type: {{ $cb.type | default "Opaque" }}
+  vaultAuthRef: k8s
+{{- end }}
+{{- end }}
