feat(umbrella): strfry + couchbase scaffolding, certs config, and operator bootstrap app (#104)
* docs: add final migration plan for ENV=local

- Add docs/MIGRATION_PLAN.md optimized for CRC with Couchbase single-node, cert-manager HTTP-01, and no CPU mode for Ollama.
- Includes agent-executable tasks (Who/What/Where/Why/Acceptance) and Dev-Vault safety notes.

* chore: ignore pac-config directory

- Prevent accidental secret commits by ignoring the entire pac-config/ folder.

* chore(scripts): make dev-vault non-destructive by default

- Add DEV_VAULT_OVERWRITE=never|missing|always (default: missing).
- Respect env var overrides; do not overwrite existing Vault keys unless explicitly requested.

* feat(charts): scaffold strfry chart and umbrella Application

- Add charts/strfry with StatefulSet, Service, Route, PVC.
- Add umbrella template app-strfry.yaml gated by values (disabled by default).

* chore: fix yamllint violations in new chart scaffolding

* feat(umbrella): pass strfry/couchbase enable flags per env via ApplicationSet

* docs: add BITIQLIVE-DEV local runbook and chart READMEs

* docs: add CERTS-LOCAL (HTTP-01) and umbrella tests for strfry/couchbase

* feat(certs): add cert-manager-config chart + umbrella app

- Add charts/cert-manager-config with HTTP-01 ClusterIssuer.
- Add umbrella Application gated by certManager.enabled; enabled for local via ApplicationSet param.

* docs(plan): add status summary and per-milestone/task statuses

* docs(plan): add Next Actions quick-scan section

* feat(umbrella): add bootstrap-operators Application and enable CAO for local

- Add app-bootstrap-operators.yaml.
- Pass CAO values (enabled/name/source/channel) for local env.
- Add tests and fix quoting/validate.
- Include cert-manager-config chart and gating in umbrella.

* docs(operators): add CAO to operator matrix and verification commands

- Adds couchbase-operator-certified row and CSV verify command.

* chore(umbrella): update appVersion for ENV=local via compu

--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -47,6 +47,27 @@ sampleAppImages:
   toyService: quay.io/paulcapestany/toy-service
   toyWeb: quay.io/paulcapestany/toy-web
 
+# New services (env toggles)
+strfry:
+  enabled: false
+couchbase:
+  enabled: false
+
+certManager:
+  enabled: false
+
+bootstrapOperators:
+  enabled: false
+  # Couchbase Autonomous Operator overrides (passed into bootstrap-operators)
+  caoEnabled: false
+  caoChannel: ""
+  caoName: ""
+  caoSource: ""
+  caoSourceNamespace: openshift-marketplace
+  caoInstallNamespace: openshift-operators
+  caoStartingCSV: ""
+  caoApproval: Automatic
+
 ciPipelines:
   serviceAccountName: pipeline
   # Optional fsGroup override for Tekton TaskRuns; empty uses SCC defaults
