--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -22,6 +22,20 @@ envs:
       pause: false
     toyWebImageUpdater:
       pause: false
+    # Enable selected services for local env
+    strfryEnabled: true
+    couchbaseEnabled: true
+    certManagerEnabled: true
+    bootstrapOperatorsEnabled: true
+    # CAO defaults for local (verify against docs/OPERATOR-VERSIONS.md on your cluster)
+    caoEnabled: true
+    caoName: couchbase-operator-certified
+    caoSource: certified-operators
+    caoChannel: stable
+    caoSourceNamespace: openshift-marketplace
+    caoInstallNamespace: openshift-operators
+    caoApproval: Automatic
+    caoStartingCSV: ""
     # Optional: fsGroup for Tekton TaskRun pods. If set, it will be passed to
     # the umbrella chart as ciPipelines.fsGroup so workspaces (PVCs) are group‑writable.
     # Leave empty to use cluster defaults/SCC. The bootstrap script auto-detects
@@ -48,6 +62,11 @@ envs:
       pause: false
     toyWebImageUpdater:
       pause: false
+    strfryEnabled: false
+    couchbaseEnabled: false
+    certManagerEnabled: false
+    bootstrapOperatorsEnabled: false
+    caoEnabled: false
     tektonFsGroup: ""
     vaultRuntimeEnabled: true
     vaultRuntimeAddress: http://vault-sno.vault.sno.svc:8200
@@ -70,6 +89,11 @@ envs:
       pause: false
     toyWebImageUpdater:
       pause: false
+    strfryEnabled: false
+    couchbaseEnabled: false
+    certManagerEnabled: false
+    bootstrapOperatorsEnabled: false
+    caoEnabled: false
     tektonFsGroup: ""
     vaultRuntimeEnabled: true
     vaultRuntimeAddress: https://vault-prod.vault.svc:8200
