feat(local): enable Strfry NetworkPolicy; wire Couchbase admin Route (serviceName+issuer); pass baseDomain to couchbase app

--- a/charts/bitiq-umbrella/templates/app-couchbase-cluster.yaml
+++ b/charts/bitiq-umbrella/templates/app-couchbase-cluster.yaml
@@ -23,6 +23,9 @@ spec:
         - values-common.yaml
         - values-{{ .Values.env }}.yaml
       ignoreMissingValueFiles: true
+      parameters:
+        - name: baseDomain
+          value: {{ .Values.baseDomain | quote }}
   destination:
     server: https://kubernetes.default.svc
     namespace: {{ .Values.appNamespace }}
