feat(routes): per-app FQDN overrides (strfry + nostr-site) and umbrella wiring

--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -56,6 +56,9 @@ couchbase:
 certManager:
   enabled: false
 
+nostrSite:
+  enabled: false
+
 bootstrapOperators:
   enabled: false
   # Couchbase Autonomous Operator overrides (passed into bootstrap-operators)
