--- a/charts/strfry/values-common.yaml
+++ b/charts/strfry/values-common.yaml
@@ -12,6 +12,8 @@ service:
   port: 7777
   type: ClusterIP
 
+route:
+  host: ""  # Optional explicit FQDN; if set, overrides hostPrefix+baseDomain
 resources:
   limits:
     cpu: 300m
