fix(charts): add TLS termination for Routes (nostr-site, couchbase admin) + unit tests
- Add spec.tls.termination: edge to nostr-site and Couchbase admin Routes
- Add helm-unittest specs to assert TLS termination
- Update Makefile to lint/test these charts with env values
- Note change in MIGRATION_PLAN PR feedback

Refs: https://github.com/bitiq-io/gitops/pull/110#discussion_r2445673501

--- a/charts/couchbase-cluster/templates/admin-route.yaml
+++ b/charts/couchbase-cluster/templates/admin-route.yaml
@@ -15,6 +15,7 @@ spec:
     name: {{ .Values.route.serviceName }}
   port:
     targetPort: {{ .Values.route.targetPort }}
+  tls:
+    termination: edge
   host: {{ include "cb.routeHost" . | quote }}
 {{- end }}
-
