feat(gitops): cert-manager via bootstrap + nginx static sites + local FQDNs
- Add Subscription for openshift-cert-manager-operator (stable-v1) and bootstrap waits
- GitOps-manage nginx static sites in bitiq-local: Deployment/Service/PVC/Routes + seed Job
- Configure local hosts: nostr_site alpha.cyphai.com, strfry relay.cyphai.com, Couchbase admin cb.cyphai.com
- Extend dev-vault to seed Couchbase admin creds from env
- Update operator matrix; add nginx pack README
- Allow pac-config/services/nginx to be tracked (.gitignore exception)

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -38,6 +38,7 @@ spec:
             strfryEnabled: {{ default false $e.strfryEnabled }}
             couchbaseEnabled: {{ default false $e.couchbaseEnabled }}
             certManagerEnabled: {{ default false $e.certManagerEnabled }}
+            nginxSitesEnabled: {{ default false $e.nginxSitesEnabled }}
             bootstrapOperatorsEnabled: {{ default false $e.bootstrapOperatorsEnabled }}
             caoEnabled: {{ default false $e.caoEnabled }}
             caoName: {{ $e.caoName | quote }}
@@ -88,6 +89,8 @@ spec:
               value: '{{ "{{ .couchbaseEnabled | default false }}" }}'
             - name: certManager.enabled
               value: '{{ "{{ .certManagerEnabled | default false }}" }}'
+            - name: nginxSites.enabled
+              value: '{{ "{{ .nginxSitesEnabled | default false }}" }}'
             - name: bootstrapOperators.enabled
               value: '{{ "{{ .bootstrapOperatorsEnabled | default false }}" }}'
             - name: bootstrapOperators.caoEnabled
