--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -40,6 +40,9 @@ couchbase:
 certManager:
   enabled: false
 
+nginxSites:
+  enabled: false
+
 bootstrapOperators:
   enabled: false
   caoEnabled: false
