--- a/charts/bootstrap-operators/values.yaml
+++ b/charts/bootstrap-operators/values.yaml
@@ -39,6 +39,15 @@ operators:
     approval: Automatic
     createNamespace: true
 
+  certManager:
+    channel: stable-v1
+    name: openshift-cert-manager-operator
+    source: redhat-operators
+    sourceNamespace: openshift-marketplace
+    installNamespace: openshift-operators
+    startingCSV: ""
+    approval: Automatic
+
   # Couchbase Autonomous Operator (disabled by default). Provide the correct
   # catalog source and package name for your environment, then set enabled=true.
   cao:
