--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,10 @@ logs/
 /.out/
 /.bin/
 
-# Local pac-config contains secrets; keep entirely untracked
-pac-config/
+# Local pac-config contains secrets; keep untracked by default, but allow
+# explicitly whitelisted, non-secret subfolders to be tracked.
+pac-config/*
+!pac-config/services/
+pac-config/services/*
+!pac-config/services/nginx/
+!pac-config/services/nginx/**
