--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -26,6 +26,7 @@ envs:
     strfryEnabled: true
     couchbaseEnabled: true
     certManagerEnabled: true
+    nginxSitesEnabled: true
     bootstrapOperatorsEnabled: true
     # CAO defaults for local (verify against docs/OPERATOR-VERSIONS.md on your cluster)
     caoEnabled: true
